@@ -1,2 +1,7 @@
 # crontab in normal crontab format
 #
+# DO NOT EDIT THIS FILE
+#
+# create and edit the one in /spider/local_cmd/crontab
+# for doing connections and things
+#
