@@ -9,7 +9,6 @@
 my ($self, $line) = @_;
 my @list = split /\s+/, $line;		      # generate a list of callsigns
 
-my $l;
 my @out;
 my $lat = $self->user->lat;
 my $long = $self->user->long;
@@ -20,7 +19,7 @@ if (!$long && !$lat) {
 }
 
 return (1, $self->msg('qrashe1')) unless @list > 0;
-return (1, $self->msg('qrae2')) unless (DXBearing::is_qra($list[0]) || $list[0] =~ /^[A-Za-z][A-Za-z]\d\d$/);
+return (1, $self->msg('qrae2', $list[0])) unless (DXBearing::is_qra($list[0]) || $list[0] =~ /^[A-Za-z][A-Za-z]\d\d$/);
 
 #print "$lat $long\n";
 
@@ -33,7 +32,7 @@ if (@list > 1) {
 	($lat, $long) = DXBearing::qratoll($f);
     #print "$lat $long\n";
 	
-	return (1, $self->msg('qrae2')) unless (DXBearing::is_qra($list[1]) || $list[1] =~ /^[A-Za-z][A-Za-z]\d\d$/);
+	return (1, $self->msg('qrae2', $list[1])) unless (DXBearing::is_qra($list[1]) || $list[1] =~ /^[A-Za-z][A-Za-z]\d\d$/);
 	$l = uc $list[1];
 }
 
@@ -43,7 +42,9 @@ my ($qlat, $qlong) = DXBearing::qratoll($l);
 #print "$qlat $qlong\n";
 my ($b, $dx) = DXBearing::bdist($lat, $long, $qlat, $qlong);
 my ($r, $rdx) = DXBearing::bdist($qlat, $qlong, $lat, $long);
-my $to = " -> $list[1]" if $f;
+my $to = '';
+
+$to = " -> $list[1]" if $f;
 my $from = $list[0];
 
 push @out, sprintf "$list[0]$to Bearing: %.0f Deg. Recip: %.0f Deg. %.0fMi. %.0fKm.", $b, $r, $dx * 0.62133785, $dx;
