@@ -18,7 +18,7 @@
 	<p>
 	<!-- Created: Wed Dec  2 18:22:33 GMT 1998 -->
 	<!-- hhmts start -->
-Last modified: Wed Dec 23 16:59:32 GMT 1998
+Last modified: Sun Dec 27 20:18:24 GMT 1998
 <!-- hhmts end -->
 
 	<h4>Introduction</h4>
@@ -65,6 +65,7 @@ Last modified: Wed Dec 23 16:59:32 GMT 1998
 	  <li> Installing the lastest version of <a href="cpan.html">CPAN</a>.
 	  <li> Explaining the <a href="client.html">client.pl</a> program.
 	  <li> <a href="connect.html">Connecting</a> to other clusters.
+	  <li> <a href="cron.html">Periodic</a> jobs, e.g. starting connection to other clusters.
 	  <li> <a href="hops.html">Hop</a> control, network <a href="hops.html#isolate">isolation</a> etc.
 	  <li> <a href="program.html">Programming</a> new commands or altering existing ones.
 	  <li> <a href="../download/">Download</a> the software and any patches.
